refactor(main): 重构主程序并移除 espnow 相关代码
- 删除了 espnow.c 和 espnow.h 文件
- 更新了 main.c 文件，移除了与 espnow 相关的代码
- 更新了 CMakeLists.txt 文件，更改了源文件名称
- 在 .gitignore 中添加了新的忽略项
- 更新了 .vscode/settings.json，添加了新的文件关联

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,10 @@
 build/
+.cache/
+.vscode/
+.vscode-test/
+compile_commands.json
+settings.json
+sdkconfig.old
+.vscode/settings.json
+sdkconfig.old
+.vscode/settings.json
